DSS-3476: Communication file read changed (#3304)
1. Changes in filerepo service

Co-authored-by: THINKPALM\athul.cp <athul.cp@thinkpalm.com>